--- a/public/test.html
+++ b/public/test.html
@@ -45,13 +45,13 @@
     }
 
     function createNext() {
-      var e = [{t : 'account', c : ['id', 'accountLocked', 'accountTxt', 'accountTypeId', 'accountCategory']}];
-      var c = [{t : 'account', cl : 'enterpriseId', v : 101, z : '='}];
+      var e = [{t : 'fiscalyear', c : ['id', 'numberOfMonths', 'fiscalYearTxt', 'transactionStartNumber', 'transactionStopNumber', 'fiscalYearNumber']}];
+      var c = [{t : 'fiscalyear', cl : 'enterpriseId', v : 101, z : '='}];
       var q = {e: e,c: c};
       var next_store = new JsonRest({
-        target: '/data/Account',
+        target: '/data/fiscalYear',
         getLabel: function(data) {
-          return (data.id + "-" + data.accountTxt);
+          return (data.fiscalYearTxt);
         }
       });
 
@@ -62,10 +62,9 @@
       }, "next");
 
       next.detect(first, 'onChange', function (i) {
-        c.v = i.value;
+        c[0].v = i.value;
         q = {e: e, c: c};
-        console.log(q.c.v);
-        console.log(JSON.stringify(q));
+        var x = {e: e, c: c};
         next.requery("?" + JSON.stringify(q));
       });
 
@@ -76,7 +75,7 @@
         t: 'period',
         c: ['fiscalYearId', 'id', 'periodStart', 'periodStop', 'order']
       }];
-      var c = [{t: 'period', cl: 'fiscalYearId', v: "*", z: '='}];
+      var c = [{t: 'period', cl: 'fiscalYearId', v: "2013001", z: '='}];
       var q = {e: e, c: c};
 
       var final_store = new JsonRest({
@@ -89,12 +88,17 @@
       final = new SelectX({
         store: final_store,
         style: "width: 220px", //update this shit
+        onChange: function() {
+          console.log("[final] Internal onChange fired.");
+        },
         query: '?' + JSON.stringify(q)
       }, "final");
 
       final.detect(next, 'onChange', function (i) {
-        c.v = i.value;
+        console.log("i", i);
+        c[0].v = i.value;
         q = {e: e, c: c};
+        console.log(JSON.stringify(q));
         final.requery("?" + JSON.stringify(q));
       });
 
