non-important edits and comments

--- a/public/tree.html
+++ b/public/tree.html
@@ -95,7 +95,7 @@ body > div{
                 menuContext = new Menu({
                     targetNodeIds: ["divTree"],
                     //selector: ".dijitTreeNode",
-                    selector: ".dijitTreeNodeContainer > .dijitTreeNode > .dijitTreeNodeContainer > .dijitTreeNode",
+                    selector: ".dijitTreeNodeContainer > .dijitTreeNode > .dijitTreeNodeContainer > .dijitTreeNode", // FIXME
                     id: "menuContext",
                     style: "display: none; cursor:pointer;",
                 });
