--- a/public/tree.html
+++ b/public/tree.html
@@ -2,23 +2,7 @@
 <html >
 <head>
   <title>Main Page</title>
-  <style>
-
-    html, body {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        background:#f3f7fc;
-    }
-    body > div{
-        width: 100%; 
-        height: 100%
-    }
-    #divLeading{
-        width: 200px;
-    }
-
-  </style>
+  <link rel = "stylesheet" type = "text/css" href="./css/principal.css" media="screen" />
   <link rel="stylesheet" href="js/dojoos/dijit/themes/claro/claro.css"/>
   <script>dojoConfig = {parseOnLoad: true}</script>
   <script type="text/javascript" src="js/dojoos/dojo/dojo.js"></script>
