fixed .css links;

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
         bc = new BorderContainer({
         }, "bc");
 
-        var tabManager = new AddTabManager({}, "tab_container");
+        var tabManager = new TabManager({}, "tab_container");
         var sidebar = new ContentPane({
-          region: 'leading',
+          region: 'left',
         }, "sidebar");
 
         var center_panel = new ContentPane({
